@@ -25,16 +25,16 @@
         <maven.compiler.target>17</maven.compiler.target>
         <delombok.source>${project.build.directory}/delombok-sources</delombok.source>
 
-        <finex-evolution.version>1.0</finex-evolution.version>
+        <finex-evolution.version>1.1</finex-evolution.version>
 
         <junit.version>5.8.2</junit.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
-        <mockito.version>3.3.3</mockito.version>
+        <mockito.version>4.3.1</mockito.version>
         <slf4j-api.version>1.7.30</slf4j-api.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.20</lombok.version>
         <typesafe-config.version>1.4.1</typesafe-config.version>
-        <reflections.version>0.10-RC1</reflections.version>
+        <reflections.version>0.10.2</reflections.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-pool2.version>2.10.0</commons-pool2.version>
         <commons-io.version>2.11.0</commons-io.version>
@@ -53,6 +53,10 @@
         <hawtio.version>2.14.3</hawtio.version>
         <mycila-guice-jsr250.version>5.0</mycila-guice-jsr250.version>
         <mycila-jmx.version>1.1.ga</mycila-jmx.version>
+        <juel.version>2.2.7</juel.version>
+        <manifold.version>2022.1.11</manifold.version>
+        <fastutil.version>8.5.8</fastutil.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     </properties>
 
     <repositories>
@@ -71,6 +75,14 @@
             <url>https://maven.pkg.github.com/Fin-Ex/finex-server</url>
         </repository>
     </distributionManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>systems.manifold</groupId>
+            <artifactId>manifold-ext-rt</artifactId>
+            <version>${manifold.version}</version>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -120,6 +132,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>com.typesafe</groupId>
@@ -176,6 +189,11 @@
                         <artifactId>guava</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax.annotation-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
@@ -291,10 +309,6 @@
                         <groupId>org.slf4j</groupId>
                         <artifactId>slf4j-api</artifactId>
                     </exclusion>
-                    <exclusion>
-                        <groupId>org.reflections</groupId>
-                        <artifactId>reflections</artifactId>
-                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -326,6 +340,21 @@
                         <artifactId>sisu-guice</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>de.odysseus.juel</groupId>
+                <artifactId>juel-api</artifactId>
+                <version>${juel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.odysseus.juel</groupId>
+                <artifactId>juel-impl</artifactId>
+                <version>${juel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil</artifactId>
+                <version>${fastutil.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -377,7 +406,33 @@
                             <arg>jdk.incubator.vector</arg>
                             <arg>--add-modules</arg>
                             <arg>jdk.incubator.foreign</arg>
+                            <arg>-Xplugin:Manifold</arg>
                         </compilerArgs>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                                <groupId>systems.manifold</groupId>
+                                <artifactId>manifold-preprocessor</artifactId>
+                                <version>${manifold.version}</version>
+                            </path>
+                            <path>
+                                <groupId>systems.manifold</groupId>
+                                <artifactId>manifold-ext</artifactId>
+                                <version>${manifold.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>--add-modules jdk.incubator.vector --add-modules jdk.incubator.foreign</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -398,6 +453,18 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.2</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            </manifest>
+                        </archive>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
